        what we should encourage people to use. 
        * include/Rcpp/as.h: add as<char> specialization
        * include/Rcpp/sugar/functions/diff.h : rework the implementation of diff
        so that it works even when we don't know the previous value
        * unitTests/runit.sugar.R : 
        * unitTests/cpp/sugar.cpp :
        * TODO : 2 less items
        
2013-09-17  JJ Allaire  <jj@rstudio.org>

	* R/Attributes.R: Call inlineCxxPlugin and Rcpp.plugin.maker without
	qualification rather than with ':::'

2013-09-17  Dirk Eddelbuettel  <edd@debian.org>

	* NAMESPACE: Export RcppLdFlags which is often used to build Rcpp
	* man/RcppLdFlags.Rd: Added required manual page
	* R/Attributes.R: Call RcppLdFlags() via '::' instead of ':::'
	* R/SHLIB.R: Ditto
	* R/inline.R: Ditto

	* vignettes/Rcpp-FAQ.Rnw: Add %\VignetteEngine{highlight::highlight}
	* vignettes/Rcpp-attributes.Rnw: Idem
	* vignettes/Rcpp-extending.Rnw: Idem
	* vignettes/Rcpp-modules.Rnw: Idem
	* vignettes/Rcpp-package.Rnw: Idem
	* vignettes/Rcpp-quickref.Rnw: Idem
	* vignettes/Rcpp-sugar.Rnw: Idem

	* vignettes/Rcpp-package.Rnw: Altered to make use of highlight
	package; also no longer build embedded demo package (which upsets R
	CMD check under R-devel)

2013-09-16  JJ Allaire <jj@rstudio.org>

        * R/Attributes.R : Remove calls to non-exported functions from the tools package

2013-09-16  Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/internal/Exporter.h : Specific handling of containers
	(std::vector, std::deque, and std::list so that we use their faster
	range constructor when we can, and so let the STL optimize how data
	is copied
        * include/Rcpp/api/meat/export.h : Implementation of the above
        * include/Rcpp/vector/Vector.h : added Vector( const char* ) ctor
        * DESCRIPTION : bump to 0.10.4.5 (for RcppExtras)

2013-09-15  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/InputParameter.h (Rcpp): Add 'const' case
